<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_0"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center" >

        <Button
            android:id="@+id/btnGamePoke"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_2"
            android:padding="@dimen/padding_medium"
            android:text="@string/game_poke"
            android:textColor="@color/black_1"
            android:textSize="@dimen/text_size_larger"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnGameRado"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_3"
            android:padding="@dimen/padding_medium"
            android:text="@string/game_rado"
            android:textColor="@color/black_1"
            android:textSize="@dimen/text_size_larger"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btnGameReturn"
        style="@android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@drawable/button_0"
        android:contentDescription="@drawable/icon_return"
        android:padding="@dimen/padding_small"
        android:src="@drawable/icon_return" />

    <TextView
        android:id="@+id/txtGameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/background_03"
        android:gravity="center"
        android:padding="@dimen/padding_small"
        android:text="@string/main_game"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black_1"
        android:textStyle="bold" />

    <com.google.ads.AdView
        android:id="@+id/ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-9404075236503358/7924797629"
        app:loadAdOnCreate="true" >
    </com.google.ads.AdView>

</FrameLayout>